--- a/fronend/project/src/app/component/vendor_component/guide/guide-home/guide-home.component.html
+++ b/fronend/project/src/app/component/vendor_component/guide/guide-home/guide-home.component.html
@@ -1,4 +1,4 @@
-<p *ngIf="status == true">hotel-home works!</p>
+<p *ngIf="status == true">guide-home works!</p>
 
 
 <div *ngIf="status == false" class="bg-slate-400 h-full w-full flex justify-center items-center">
