--- a/fronend/project/src/app/navbar/user-navbar/user-navbar.component.html
+++ b/fronend/project/src/app/navbar/user-navbar/user-navbar.component.html
@@ -11,6 +11,9 @@
         <a class="text-blue-50 text-xl hover:text-blue-500" routerLink="/user_signup" routerLinkActive="active">Sign
           up</a>
       </li>
+      <li class="mr-6">
+        <a class="text-blue-50 text-xl hover:text-blue-500" routerLink="/user_profile" routerLinkActive="active">Profile</a>
+      </li>
     </ul>
   </div>
   <div class="mb-8">
