--- a/fronend/project/src/app/component/user_component/user-profile/user-profile.component.html
+++ b/fronend/project/src/app/component/user_component/user-profile/user-profile.component.html
@@ -3,15 +3,16 @@
 
 
 <section class=" w-full bg-gray-700 h-full overflow-hidden">
+    <div class="w-full h-full flex">
 
-    <div class="flex bg-gray-700 justify-center pt-10 mb-20 w-full h-full items-center">
-        <div class="basis-4/6 flex justify-center">
+    <div class="flex flex-col bg-gray-700 justify-center pt-10 mb-20 w-full h-full items-center">
+        <div class="basis-4/6 flex flex-col items-center justify-center w-full pl-10 pr-10">
 
-            <div class="basis-3/6 flex justify-center flex-col" *ngIf="loading == false">
-                <advanced-image [cldImg]="img" class="w-20 h-20 ml-52" [ngStyle]="{'border-radius':'100%'}">
+            <div class="basis-2/6 flex justify-center flex-col items-center" *ngIf="loading == false">
+                <advanced-image [cldImg]="img" class="w-20 h-20 " [ngStyle]="{'border-radius':'100%'}">
                 </advanced-image>
 
-                <div class="w-10 h-5 ml-56 -mt-9">
+                <div class="w-10 h-5 -mt-9">
                     <ngx-dropzone (change)="onSelect($event)" class="h-10 mb-20 name">
                         <ngx-dropzone-label class="plus">+</ngx-dropzone-label>
                         <ngx-dropzone-image-preview ngProjectAs="ngx-dropzone-preview" *ngFor="let f of files"
@@ -33,7 +34,7 @@
 
             <div class="loader" *ngIf="loading == true"></div>
 
-            <div class="basis-3/6 ml-10">
+            <div class="basis-4/6 flex justify-center items-center">
                 <div>
                     <h1>Name : {{UserData.name}}</h1>
                     <h2>Email : {{UserData.email}}</h2>
@@ -42,5 +43,15 @@
             </div>
         </div>
     </div>
+</div>
 
 </section>
+
+
+
+
+
+
+
+
+    
